p3/shared/srcs/app/iot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-ingress
  namespace: dev
spec:
  ingressClassName: traefik 
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: playground-svc
            port:
              number: 8888
